--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1025,7 +1025,7 @@ a {
 .cid-sFGzrhlvIh {
   padding-top: 120px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/dscn0268.jpg");
+  background-image: url("../../../assets/images/dscn0425-min-2000x1125.jpg");
 }
 .cid-sFGzrhlvIh .icons-media-container {
   display: flex;
